--- a/bate papo.css
+++ b/bate papo.css
@@ -10,3 +10,20 @@ img{
 body{
     background-color: rgb(255, 255, 255)
 }
+
+@keyframes fade-in {
+    from {
+        opacity: 0; 
+        transform: translateY(20px); 
+    }
+    to {
+        opacity: 1; 
+        transform: translateY(0); 
+    }
+}
+
+
+* {
+    opacity: 0; 
+    animation: fade-in 1s ease-in-out forwards;
+}
