--- a/estilo.css
+++ b/estilo.css
@@ -25,3 +25,20 @@ b{
 label{
 color: black;
 }
+
+@keyframes fade-in {
+    from {
+        opacity: 0; 
+        transform: translateY(20px); 
+    }
+    to {
+        opacity: 1; 
+        transform: translateY(0); 
+    }
+}
+
+
+* {
+    opacity: 0; 
+    animation: fade-in 1s ease-in-out forwards;
+}
